--- a/sunsama-frontend/package.json
+++ b/sunsama-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "convex": "^1.27.5",
+    "dayjs": "^1.11.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.4"
