--- a/sunsama-frontend/package.json
+++ b/sunsama-frontend/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.15",
     "convex": "^1.27.5",
-    "dayjs": "^1.11.18",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "dayjs": "^1.11.19",
+    "lucide-react": "^0.553.0",
+    "react": "^19.2.0",
+    "react-day-picker": "^9.11.1",
+    "react-dom": "^19.2.0",
     "react-router": "^7.9.4"
   },
   "devDependencies": {
